// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with checked switch 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  cursor: pointer;
  width: 48px;
  height: 24px;
  border-radius: 9999px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  background-color: #F46152;
}

.c1:focus + .c4,
.c1:hover + .c4 {
  box-shadow: 0 0 0 8px rgba(152,152,166,0.2);
}

.c3 {
  position: relative;
  pointer-events: none;
  width: 16px;
  height: 16px;
  left: 4px;
  border-radius: 9999px;
  background-color: #FFFFFF;
  -webkit-transition: 300ms;
  transition: 300ms;
  left: calc(100% - 4px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.c1:focus + .c3,
.c1:hover + .c3 {
  box-shadow: 0 0 0 8px rgba(244,97,82,0.2);
}

<div>
  <label
    class="c0"
  >
    <input
      aria-checked="true"
      aria-hidden="true"
      aria-readonly="false"
      class="c1 c2"
      role="switch"
      type="checkbox"
    />
    <span
      class="c3"
      role="button"
    />
  </label>
</div>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with default switch 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  cursor: pointer;
  width: 48px;
  height: 24px;
  border-radius: 9999px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  background-color: #DBDBE8;
}

.c3 {
  position: relative;
  pointer-events: none;
  width: 16px;
  height: 16px;
  left: 4px;
  border-radius: 9999px;
  background-color: #FFFFFF;
  -webkit-transition: 300ms;
  transition: 300ms;
}

.c1:focus + .c3,
.c1:hover + .c3 {
  box-shadow: 0 0 0 8px rgba(152,152,166,0.2);
}

<div>
  <label
    class="c0"
  >
    <input
      aria-checked="false"
      aria-hidden="true"
      aria-readonly="false"
      class="c1 c2"
      role="switch"
      type="checkbox"
    />
    <span
      class="c3"
      role="button"
    />
  </label>
</div>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with disabled and checked switch 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  cursor: pointer;
  width: 48px;
  height: 24px;
  border-radius: 9999px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  background-color: #F46152;
  background-color: #F5F5FA;
  cursor: not-allowed;
}

.c1:focus + .c4,
.c1:hover + .c4 {
  box-shadow: 0 0 0 8px rgba(152,152,166,0.2);
}

.c1:focus + .c5,
.c1:hover + .c5 {
  box-shadow: 0 0 0 8px rgba(244,97,82,0.2);
}

.c3 {
  position: relative;
  pointer-events: none;
  width: 16px;
  height: 16px;
  left: 4px;
  border-radius: 9999px;
  background-color: #FFFFFF;
  -webkit-transition: 300ms;
  transition: 300ms;
  left: calc(100% - 4px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
  background-color: #DBDBE8;
  cursor: not-allowed;
}

<div>
  <label
    class="c0"
    disabled=""
  >
    <input
      aria-checked="true"
      aria-hidden="true"
      aria-readonly="true"
      class="c1 c2"
      disabled=""
      role="switch"
      type="checkbox"
    />
    <span
      class="c3"
      disabled=""
      role="button"
    />
  </label>
</div>
`;

exports[`<Checkbox /> <Checkbox.Switch /> Snapshots should match snapshot with disabled switch 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  cursor: pointer;
  width: 48px;
  height: 24px;
  border-radius: 9999px;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  background-color: #DBDBE8;
  background-color: #F5F5FA;
  cursor: not-allowed;
}

.c1:focus + .c4,
.c1:hover + .c4 {
  box-shadow: 0 0 0 8px rgba(152,152,166,0.2);
}

.c3 {
  position: relative;
  pointer-events: none;
  width: 16px;
  height: 16px;
  left: 4px;
  border-radius: 9999px;
  background-color: #FFFFFF;
  -webkit-transition: 300ms;
  transition: 300ms;
  background-color: #DBDBE8;
  cursor: not-allowed;
}

<div>
  <label
    class="c0"
    disabled=""
  >
    <input
      aria-checked="false"
      aria-hidden="true"
      aria-readonly="true"
      class="c1 c2"
      disabled=""
      role="switch"
      type="checkbox"
    />
    <span
      class="c3"
      disabled=""
      role="button"
    />
  </label>
</div>
`;
